--- a/showhide.html
+++ b/showhide.html
@@ -15,7 +15,8 @@
 
 <body>
 <div class="container">
-
+    <!--This BootStrap class just provides just a basic container for the table-->
+    <!--You aren't required to use it.-->
     <div class="jumbotron">
         <!-- This table will hold the target(s) -->
         <table>
