--- a/showhide.html
+++ b/showhide.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <title>Show/Hide Game</title>
     <!-- jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>-->
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link rel="stylesheet" href="showhide.css"/>
-    <script src="showhide.js"></script>
 
+    <script src="jquery-3.3.1.js"></script>
+    <script src="showhide.js"></script>
 </head>
 
 <body>
