Reworked issues with game so it is less buggy.

--- a/showhide.html
+++ b/showhide.html
@@ -91,10 +91,12 @@
             <label for="numberOfTargets">Number of Targets:</label>
             <input id="numberOfTargets" type="text"/>
 
-            <label for="displayTime">TargetDisplay Time (ms):</label>
+            <label for="displayTime">TargetDisplay Time (s):</label>
             <input id="displayTime" type="text"/>
 
             <button class="btn btn-primary" id="goGetIt">GO!</button>
+            <h5 class="clickCounter" id="clickCounter">Clickcounter: 0</h5>
+            <!--added to keep track of clicks left-->
         </p>
 
         <script>
